fixing overflowing, add about and navbar and some features

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Syne:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   /* color: #000; */
-  font-feature-settings: 'pnum' on, 'lnum' on;
-  
+  font-feature-settings: 'pnum' on, 'lnum' on !important;
 }
 
 
@@ -136,7 +138,59 @@ video {
   color: #fff;
 }
 
+.navbar-section {
+  background: #00000034;
+  position: fixed;
+  height: 80px;
+  width: 100%;
+  backdrop-filter: blur(5px);
+}
 
+#nav {
+  display: flex;
+  align-items: center;
+  padding: 10px 40px;
+  justify-content: space-between;
+  z-index: 5;
+}
+
+#nav img {
+  height: 30px;
+  justify-content: space-between;
+}
+
+#nav2 {
+  display: flex;
+  gap: 55px;
+}
+
+#nav3 {
+  display: flex;
+  gap: 55px;
+  align-items: center;
+}
+
+#nav3 h3 {
+  text-transform: uppercase;
+}
+
+#nav3 h4 {
+  text-transform: uppercase;
+}
+
+#nav3 button {
+  background-color: #fff;
+  color: #000;
+  padding: 18px 25px;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+}
+
+.header-wrap {
+  /* position: fixed; */
+  background: #000;
+}
 
 .brand-description,
 .contact-button {
@@ -235,7 +289,7 @@ video {
 
 .menu-holder .menu-inside {
   position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 
   /* -webkit-transform: translateX(-100%);
@@ -513,26 +567,31 @@ video {
 
 
 /* About */
-.about-section{
+.about-section {
   height: 100vh;
-  width: 100vw;
+  /* width: 98.8vw; */
+  width: 100%;
   /* overflow-x: hidden; */
+  z-index: -1;
+  position: relative;
 }
+
 .reveal {
   background: var(--backgroundColor);
   /* padding-left: 10%; */
   /* padding-right: 10%; */
   padding-top: 5%;
   padding-bottom: 5%;
-  z-index: -1;
+  /* z-index: -99; */
   padding: 40px;
+  
 
 }
 
 .about-heading {
   font-size: var(--headlineBig);
   position: relative;
-width: 40vw;
+  width: 40vw;
 }
 
 .about-heading span {
@@ -545,9 +604,11 @@ width: 40vw;
   display: flex;
   gap: 70px;
 }
-.about-text{
+
+.about-text {
   width: 40vw;
 }
+
 .reveal-text {
   font-weight: 800;
   font-size: 30px;
@@ -570,4 +631,61 @@ width: 40vw;
   .reveal {
     padding-left: 10px;
   }
+}
+
+.serv {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  top: 38vh;
+  padding: 20px;
+}
+
+.serv__item {
+  position: relative;
+  padding: 40px 0;
+  border-bottom: 1px solid #2f2e2e;
+  z-index: -1;
+}
+
+.serv__item-arrow {
+  position: absolute;
+  display: inline-block;
+  width: 55px;
+  height: 55px;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+}
+
+.serv__item-arrow img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  transform: rotate(180deg);
+  opacity: 0.8;
+  z-index: -1;
+}
+
+.serv__item-text {
+  font-size: 50px;
+  color: #9394a5;
+  font-family: 'Syne', sans-serif;
+}
+
+.serv .content .section-title {
+  color: #484b6a;
+  font-size: var(--headlineBig);
+  font-weight: 600;
+  text-transform: none;
+  position: relative;
+  padding-left: 15vh;
+  z-index: -1;
+}
+
+.serv .content .section-title span {
+  display: inline-block;
+  color: transparent;
+  -webkit-text-stroke: 1px #484b6a;
 }
